# flatpg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: simple_graph.rs
graph-schema/: Cargo.toml
graph-schema-derive/: Cargo.toml
graph-schema-derive/src/: common.rs  edge_structs_derives.rs  enum_derives.rs  lib.rs  node_structs_derives.rs  property_trait_derives.rs
graph-schema/src/: edge.rs  error.rs  graph.rs  lib.rs  node.rs  property.rs  schema.rs  storage.rs  strings_pool.rs
src/: lib.rs
tests/: graph_tests.rs
